// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tab Panel renders permissions panel 1`] = `
<DocumentFragment>
  <div
    aria-labelledby="simple-tab-Permissions"
    id="simple-tabpanel-Permissions"
    role="tabpanel"
  >
    <div
      class="PodBrowser-root PodBrowser-root"
    />
  </div>
</DocumentFragment>
`;

exports[`Tab Panel renders profile panel 1`] = `
<DocumentFragment>
  <div
    aria-labelledby="simple-tab-Profile"
    id="simple-tabpanel-Profile"
    role="tabpanel"
  >
    <div
      class="PodBrowser-root PodBrowser-root"
    />
  </div>
</DocumentFragment>
`;
